# lyricsx

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  config.h.in
cmake/: cmake_uninstall.cmake.in  flags_clang.cmake  flags_gnu.cmake  flags_unix.cmake  flags_win.cmake  macro.cmake  options.cmake  options_unix.cmake  precheck.cmake
data/: CMakeLists.txt
data/desktop/: CMakeLists.txt
data/desktop/menus/: lyricsx.desktop
data/desktop/mimetypes/: x-lyrics.xml
data/translations/: CMakeLists.txt  qt_zh_CN.ts  update-ts.sh  zh_CN.ts
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  application.cpp  application.h  encodingchooser.cpp  encodingchooser.h  encodingchooser.ui  i18n.cpp  i18n.h  icons.qrc  lrceditor.cpp  lrceditor.h  lrchighlighter.cpp  lrchighlighter.h  lyricsx.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicselector.cpp  musicselector.h  musicselector.ui  playerwidget.cpp  playerwidget.h  playerwidget.ui  preferences.cpp  preferences.h  preferences.ui  stylehelper.cpp  stylehelper.h
src/lrc/: CMakeLists.txt  lrc.cpp  lrc.h  lrc_export.h  lrcreader.cpp  lrcreader.h  lrcwriter.cpp  lrcwriter.h
src/player/: CMakeLists.txt  mediaplayer.cpp  mediaplayer.h  mprisplayer.cpp  mprisplayer.h  mprisplayerhelper.cpp  mprisplayerhelper.h  player.cpp  player.h  player_export.h  playerfactory.cpp  playerfactory.h
src/utils/: CMakeLists.txt  log.cpp  log.h  utils_export.h
tests/: CMakeLists.txt
tests/lrc/: CMakeLists.txt  Jewel-Stand.lrc  gb18030.lrc  test_reader.cpp  test_writer.cpp
tests/player/: CMakeLists.txt  test_player.cpp
