add_executable(lyricx
	icons.qrc
	application.cpp
	application.h
	lrceditor.cpp
	lrceditor.h
	main.cpp
	mainwindow.cpp
	mainwindow.h
	mainwindow.ui
	musicselector.cpp
	musicselector.h
	musicselector.ui
	playerwidget.cpp
	playerwidget.h
	playerwidget.ui
	)

target_link_libraries(lyricx
	lrc
	player
	Qt5::Core
	Qt5::Widgets
	)
