add_executable(lyricsx
	icons.qrc
	application.cpp
	application.h
	lrceditor.cpp
	lrceditor.h
	lrchighlighter.cpp
	lrchighlighter.h
	main.cpp
	mainwindow.cpp
	mainwindow.h
	mainwindow.ui
	musicselector.cpp
	musicselector.h
	musicselector.ui
	playerwidget.cpp
	playerwidget.h
	playerwidget.ui
	preferences.cpp
	preferences.h
	preferences.ui
	encodingchooser.cpp
	encodingchooser.h
	encodingchooser.ui
	)

target_link_libraries(lyricsx
	lrc
	player
	Qt5::Core
	Qt5::Widgets
	)

install_bin(lyricsx)
